fixed: alignment

--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -52,7 +52,7 @@ h1 {
 
 .maincontainer {
   position: absolute;
-  margin-top: 100px;
+  top: 50px;
 }
 
 .getWeather {
